--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,3 +66,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+:root {
+    --bg-color: #121212;
+    --text-color: #ffffff;
+}
+
+body, html{
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
